# AnalyzeMate-server

./: .env-non-dev  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: actions.yml  check-startup.yml  pre-commit.yml
alembic/versions/: e58c17cd534a_initial.py
fixtures/: init.sql
src/: alembic.ini  config.py  main.py
src/alembic/: env.py
src/alembic/versions/: 088c06118695_change_options_config.py  1188061f977f_change_pk_in_candles.py  3160611ad2f5_fix_securities_and_timezone.py  5a5a5ba368ec_add_securities.py  5de3e9cda0d1_add_portfolio_transactions_fix_user_.py  80890ad7ff2c_add_tz.py  8ac292250d57_add_timeframe_to_historic_candles.py  8ed1eeaa51a4_change_pk_in_candles.py  a56fd82904c1_add_security_price.py  abb601e5d226_add_user_notification.py  b963b490cda4_change_transaction_pk.py  bce2235e926f_timestamp_to_float.py  c70f332fbba0_add_securities.py  (+3 more)
src/api/: api.py  deps.py
src/auth/: __init__.py  configuration.py  user_manager.py
src/db/: __init__.py  base.py  base_repository.py
src/exceptions/: base.py  portfolio.py  securities.py
src/notification/: manager.py
src/portfolio/: schemas.py
src/repositories/: historic_candles.py  portfolio.py  security.py  transaction.py  user.py
src/securities/: schemas.py
src/services/: historic_candle.py  portfolio.py  security.py  transaction.py  user.py
src/strategies/: Graphic.py  Indicators.py  Servises.py  base.py  data_shares_for_tests.json  example.py  graphic.py  indicators.py  intrevals.py  list_shares.py  prediction.py  servises.py  settings_strategies.py  supported_shares.py  upload_data.py  write_data.py
src/task/: __init__.py  base.py  task.py  task_get_new_candles.py  task_register.py  task_send_notification.py  task_strategy.py  task_upload.py
src/test/: conftest.py  settings_test.py  test_api.py
src/transactions/: schemas.py
(+36 files in other folders)
